fixed bug with horizontal scrollbar and added few optimizations for mobile phones (not entirely)

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -54,3 +54,10 @@ section {
         background-attachment: scroll;
     }
 }
+
+@media screen and (max-width: 768px) {
+    .video-cover {
+        position: relative;
+        overflow: hidden;
+    }
+}
