--- a/src/app/dostupne-marke/dostupne-marke.component.scss
+++ b/src/app/dostupne-marke/dostupne-marke.component.scss
@@ -37,3 +37,30 @@
     height: 180px;
     transition: 0.5s;
 }
+
+@media screen and (max-width: 768px) {
+    .image-container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .obicni {
+        filter: grayscale(0%);
+        height: 120px;
+        margin: 5px;
+        transition: 0.5s;
+    }
+
+    .image-container img:hover {
+        transform: scale(1);
+    }
+
+    .image-container .indian {
+        filter: grayscale(0%);
+        height: 150px;
+        margin: 5px;
+        transition: 0.5s;
+    }
+}
