--- a/src/app/usluge/usluge.component.scss
+++ b/src/app/usluge/usluge.component.scss
@@ -24,15 +24,39 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 0 20px;
+    margin: 0 100px;
 }
 
 .image-caption {
-    margin-top: 10px;
+    margin-top: 15px;
     text-align: center;
     font-size: 20px;
 }
 
 .image-wrapper img {
-    height: 200px;
+    height: 150px;
+}
+
+@media screen and (max-width: 768px) {
+    .image-container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .image-wrapper {
+        text-align: center;
+        margin: 10px;
+    }
+
+    .image-caption {
+        margin-top: 10px;
+        font-size: 16px;
+    }
+
+    .image-wrapper img {
+        height: 100px;
+        margin-bottom: 5px;
+    }
 }
